// Vitest Snapshot v1

exports[`matches snapshots for { a: [Combination], c: 6 } 1`] = `
[
  {
    "a": [],
    "c": 6,
  },
  {
    "a": [
      1,
    ],
    "c": 6,
  },
  {
    "a": [
      2,
    ],
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "c": 6,
  },
]
`;

exports[`matches snapshots for { a: [Combination], l: [Combination], b: 10, c: 6 } 1`] = `
[
  {
    "a": [],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      1,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      2,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      1,
    ],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      2,
    ],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
  },
]
`;

exports[`matches snapshots for { one: [Combination], optional: [Combination] } 1`] = `
[
  {
    "one": 1,
    "optional": 5,
  },
  {
    "one": 2,
    "optional": 5,
  },
  {
    "one": 1,
  },
  {
    "one": 2,
  },
]
`;
